@@ -1,3 +1,8 @@
+12/11/2018:
+	- Refactored image procesing code. Transform functions are now encapsulated
+	  within a struct to allow new processing engines to be more easily added.
+
+
 05/11/2018:
 	- Added codecOptions list to Session class for setting options for the encoders
 	  or decoders. Added KDU_READMODE environment variable for setting the Kakadu
